old FakeFS commented out (many things won't work for now)